refactoring toggleNav functionality and adding nav-contracting attribute to deal with CSS z-index issue on animation of nav contraction

--- a/css/px-app-nav.css
+++ b/css/px-app-nav.css
@@ -657,10 +657,10 @@ button.btn {
   :host ::content .login {
     width: 14.6rem; }
 
-:host[nav-expanded] {
+:host[nav-expanded], :host[nav-contracting] {
   z-index: 2; }
   @media screen and (min-width: 64em) {
-    :host[nav-expanded] {
+    :host[nav-expanded], :host[nav-contracting] {
       z-index: auto; } }
 
 :host(.navbar--collapsed) {
